# Med-Seg

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  experiment_brainiac.yaml  experiment_triad_plain.yaml  experiment_triad_plain_preregistry.yaml  experiment_triad_swinb.yaml
presets/: brain_augment.yaml  brain_preprocess.yaml  brain_tta.yaml
registries/: README.md  registry.example.json
scripts/: __init__.py  calibrate_eval.py  infer_uncertainty.py  normalize_registry.py  optuna_tune.py  prepare_cache.py  register_brain_masked.py  train.py  train_cv.py  train_ensemble.py  train_monai_unet_baseline.py
src/medseg/: __init__.py  augment.py  calibration.py  config.py  dataset.py  dataset_volume.py  io_registry.py  losses.py  metrics.py  preprocess.py  qa_viz.py  registry_build.py  size_stratified_metrics.py  tta.py  uncertainty.py  wandb_utils.py
src/medseg/models/: __init__.py  brainiac_wrapper.py  seg_head.py  triad_backbones.py
